# dot_shader

./: .gitignore  CMakeLists.txt
env/: .env
resources/: shaders.hlsl
src/: main.cpp  pch.h
src/dot_shader/env/: env.cpp  env.h
src/dot_shader/fs/: fs.cpp  fs.h
src/dot_shader/helpers/: ascii_to_w.h  throw_if_failed.h
src/dot_shader/render/: render_surface.cpp  render_surface.h  renderer.cpp  renderer.h
src/dot_shader/thread/: mpmc_queue.cpp  mpmc_queue.h
src/dot_shader/window/: window.cpp  window.h  window_event.cpp  window_event.h  window_inst.cpp  window_inst.h  window_manager.cpp  window_manager.h
